# config-validator

./: README.md  pyproject.toml
examples/: config.toml  schema.json
src/config_validator/: __init__.py  cli.py  suite.py
